แก้ไขความขัดแย้ง

--- a/hw1/body.html
+++ b/hw1/body.html
@@ -6,6 +6,7 @@
     <title>lap1server</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
+<div class="cmos">
 <body>
     <header>
         <img src="logo.jpg" alt="">
@@ -190,4 +191,5 @@
         
     </form>
 </body>
+</div>
 </html>
