--- a/hw5/body.html
+++ b/hw5/body.html
@@ -136,8 +136,10 @@
         <div>
             <button onclick="calR()">Calculate</button>
         </div>
-
-        <div id="resistor-value">Resistor value: </div>
+        <div class="result">
+            <h3>Resistor value: </h3>
+            <div id="resistor-value"></div>
+        </div>
     </div>
 
     <script>
